# anukriti_lite

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  1000_GENOMES_S3_OPTIMIZATION.md  ACTION_PLAN_IMMEDIATE.md  BACKEND_SERVER_TIMEOUT_FIX_IMPLEMENTED.md  COMPETITION_FEEDBACK_RESPONSE_STRATEGY.md  DATA_SOURCE_FLOW.md  DAY1_AFTERNOON_COMPLETE.md  DAY1_COMPLETE_SUMMARY.md  DAY1_MORNING_COMPLETE.md  DAY2_COMPLETE_SUMMARY.md  DAYS_1_2_COMPLETE.md  Dockerfile  EXECUTIVE_SUMMARY_PRODUCTION_READINESS.md  GENE_ACCESS_ARCHITECTURE_EXPLANATION.md  GENE_PANEL_EXPANSION_EXPLAINED.md  IMMEDIATE_ACTION_CHECKLIST.md  IMPLEMENTATION_PROGRESS_SUMMARY.md  Makefile  NEXT_STEPS_DAY3.md  PRODUCTION_READINESS_ANALYSIS.md  QUICK_START_GENE_EXPANSION.md  QUICK_STATUS_DATA_SOURCE_FLOW.md  QUICK_STATUS_DAY1.md  QUICK_STATUS_DAY2.md  QUICK_STATUS_FINAL_VERIFICATION.md  QUICK_STATUS_GENE_PANEL_EXPLANATION.md  QUICK_STATUS_STEERING_DOCS_DATA_SOURCE_UPDATE.md  QUICK_STATUS_STEERING_UPDATE.md  QUICK_STATUS_WEEK1_COMPLETE.md  QUICK_STATUS_WEEK1_DAY2.md  QUICK_STATUS_WEEK1_FINAL.md  README.md  ROADMAP.md  S3_ACCESS_ALREADY_IMPLEMENTED.md  STEERING_DOCS_ACTION_PLAN_UPDATE.md  STEERING_DOCS_BACKEND_SERVER_UPDATE.md  (+56 more)
.github/: pull_request_template.md  settings.yml
docker/: Dockerfile.dev  Dockerfile.dev-enhanced  Dockerfile.prod  README-dev-enhanced.md  README.md  nginx-entrypoint.sh  nginx-ssl-setup.sh  nginx.conf
docs/: 1000_GENOMES_AWS_ACCESS.md  ANUKRITI_ARTICLE_PDF_REVISION_NOTES.txt  ANUKRITI_FINAL_ARTICLE.md  ANUKRITI_LITE_COLOSSEUM.md  Anukriti_article_revised_full.txt  COLOSSEUM_COPILOT_EVIDENCE.md  COLOSSEUM_PARTNER_STRATEGY.md  COLOSSEUM_SUBMISSION.md  DEEPVARIANT_ANALYSIS.md  DEEPVARIANT_COLLABORATION_PITCH.md  DEEPVARIANT_HARDWARE_GUIDE.md  DEEPVARIANT_LIMITED_RESOURCES.md  DEEPVARIANT_POSSIBILITIES.md  DEEPVARIANT_QUICKSTART.md  DEEPVARIANT_TIER3_VALIDATION.md  DESIGN_PARTNER_OUTREACH.md  GENE_PANEL_EXPANSION_SPEC.md  JUDGE_DEMO_CHECKLIST.md  LOCAL_RUNTIME_CONTEXT.md  MVP_TRIAL_WEDGE.md  PHARMA_INTEGRATION_GUIDE.md  PROJECT_ANUKRITI_ARTICLE.md  README.md  SOLANA_ATTESTATION.md  TRIAL_EVIDENCE_PACK.md
examples/: deployment_example.py
lambda/: lambda_function.py  stepfunctions-trust-policy.json
qvac/: example-input.json  package-lock.json  package.json  qvac_pgx_explain.mjs
scripts/: README.md  backup_manager.py  benchmark_gene_panel.py  benchmark_performance.py  check_vcf_integrity.py  cpic_sync.py  data_initializer.py  deploy_to_registry.py  download_vcf_files.py  eval_pgx_retrieval.py  filter_vcf_to_pgx_regions.py  generate_novel_drug_validation_artifact.py  generate_ssl_certs.sh  generate_validation_results.py  ingest_chembl_to_opensearch.py  ingest_chembl_to_pinecone.py  init_gene_database.py  list_models.py  list_models_v2.py  load_test_demo.py  multi_arch_build.py  pharmvar_sync.py  precompute_demo_scenarios.py  production_monitor.py  run_benchmark_comparison.py  run_deepvariant_validation.sh  run_pharmcat_comparison.py  run_tests_in_container.py  run_validation_suite.py  schema.sql  security_scanner.py  setup_chembl.py  setup_dev_env.py  setup_opensearch_index.py  setup_pinecone_index.py  ssl_manager.py  test_all_llm_backends.py  test_bedrock_nova.py  test_chromosome10.py  train_drug_reranker.py  (+2 more)
slco1b1_cpic_pack_v0_5/: statin_examples.json
src/: __init__.py  agent_engine.py  allele_caller.py  ancestry_inference.py  ancestry_risk.py  chembl_processor.py  citation_grounding.py  confidence_tiering.py  config.py  cyp1a2_caller.py  cyp2b6_caller.py  cyp3a_caller.py  ddgi_engine.py  diagram_generator.py  dpyd_caller.py  embeddings_bedrock.py  embeddings_local.py  exceptions.py  fhir_genomics.py  g6pd_caller.py  gst_caller.py  hla_caller.py  input_processor.py  llm_bedrock.py  logging_config.py  metrics.py  multi_backend_llm.py  nat2_caller.py  novel_drug_inference.py  pgx_structured.py  pgx_triggers.py  pgx_verification.py  population_simulator.py  prs_engine.py  qvac_llm.py  rag_bedrock.py  rate_limiter.py  remote_vcf.py  report_pdf.py  resilience.py  (+9 more)
tests/: quick_test.py  test_benchmark_comparison.py  test_chembl_setup_integration.py  test_cicd_pipeline_properties.py  test_clinical_cases.py  test_complete_workflow_integration.py  test_containerized_enhanced_features.py  test_containerized_testing_integration.py  test_core_callers.py  test_coriell_validation.py  test_cyp2d6_cnv.py  test_data_initialization_properties.py  test_deploy_to_registry_integration.py  test_deploy_to_registry_properties.py  test_dev_environment_properties.py  (+23 more)
(+149 files in other folders)
